--- a/client/src/stylesheet.css
+++ b/client/src/stylesheet.css
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@300;400;500;600;700&display=swap');
 /* --- REUSEABLE ELEMENTS - USED ON MORE THAN ONE PAGE --- */
+:root {
+  --font-family: 'Quicksand', sans-serif;
+}
+
 body::before {
   content: '';
   position: absolute;
@@ -12,15 +17,12 @@ body::before {
 }
 
 body {
-  font-size: x-large;
+  /* font-size: x-large; */
   margin: 0;
   color: black;
-  //text-shadow: 0.5px 0 0 #000, 0 0.5px 0 #000, 0 0.5px 0 #000, 0.5px 0 0 #000;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: var(--font-family);
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
   background-size: cover;
   background-image: url('../assets/cat-wallpaper.png');
 }
@@ -30,7 +32,9 @@ body {
   /* padding-bottom: 100px; */
   h1 {
     margin: 20px;
-    color: #f4496f;
+    color: #ff6300;
+    font-family: 'Pacifico',
+      cursive;
   }
   a {
     color: #000;
@@ -59,14 +63,19 @@ body {
 
 /* --- GENERAL STYLING - APPLIES TO ENTIRE APP --- */
 
+
+h3 {
+  font-size: 36px;
+  font-weight: 800;
+}
 button {
-  margin-top: 30px;
-  height: 40px;
-  font-size: 18px;
+  margin: 30px 0px;
   border-radius: 30px;
   border: none;
-  /* Gradient Background */
-  background: linear-gradient(to bottom, #4cb8b8, #0184b8);
+  font-weight: 600;
+  font-family: var(--font-family);
+  font-size: 24px;
+  background: #ff6300;
   color: #fff; /* Text color */
 }
 
@@ -76,10 +85,23 @@ button:hover {
 
 input {
   width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
+  padding: 5px 10px;
+  font-size: 24px;
+  margin-bottom: 20px;
+  border: none;
+  border-bottom: 2.5px solid black;
   box-sizing: border-box;
-  border-radius: 10px;
+}
+
+input::placeholder {
+  color: black;
+  font-weight: 600;
+  font-family: var(--font-family);
+}
+
+label {
+  color: #5C5C5C;
+  font-size: 18px;
 }
 
 select {
@@ -154,26 +176,78 @@ select {
 }
 
 /* SIGN UP PAGE */
-.signup-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box; /* Include padding and border in the total width and height */
-}
 .signup-form {
+  min-width: 500px;
+  max-width: 600px;
+  margin: auto;
+  margin-top: 100px;
+  padding: 50px 100px;
+  background: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  align-content: center;
-  justify-content: space-between;
-  padding: 8px;
-  border-radius: 5px;
-  Button {
-    size: large;
-    width: 300px;
+  /* align-items: center; */
+  /* justify-content: center; */
+  border-radius: 28px;
+  box-sizing: border-box; /* Include padding and border in the total width and height */
+  label {
+    margin-top: 10px;
+  }
+  button {
+    width: 100%;
     padding: 10px;
   }
+}
+
+.select-profile-type {
+  display: flex;
+  label {
+    color: black;
+    font-weight: 600;
+    display: flex;
+    font-size: 24px;
+  }
+}
+
+.custom-radio {
+  display: flex;
+}
+
+.custom-radio input {
+  opacity: 0;
+  position: absolute;
+}
+
+.custom-radio label {
+  position: relative;
+  padding: 0px 30px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+.custom-radio label:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin-top: 5px;
+  width: 20px;
+  height: 20px;
+  border: 1px solid black;
+  background-color: white;
+  box-sizing: border-box;
+  
+}
+
+.custom-radio input:checked + label:before {
+  content: '\2713';
+  font-size: 35px;
+  color: #00FF29;
+  text-align: center;
+  line-height: 7px;
+}
+
+.googleOauthButton {
+  margin-left: 87px;
 }
 
 /* LOG IN PAGE */
@@ -387,6 +461,3 @@ select {
   margin-bottom: 30px;
 }
 
-.googleOauthButton {
-  margin: 30px;
-}
